Contact us section spacing correction

--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@ section span{
 .header section ul{
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: center;  
     list-style: none;
     justify-content: space-between;
     width: 30rem;
@@ -185,7 +185,7 @@ span.dark-color{
 }
 
 .contact-container{
-    height: 60vh;
+    height: 100%;
     background: #181414;
     display: flex;
     flex-direction: column;
